--- a/package.json
+++ b/package.json
@@ -17,14 +17,18 @@
     "browser-sync": "2.12.10",
     "editorconfig-tools": "0.1.1",
     "gulp": "3.9.1",
+    "gulp-clean": "^0.3.2",
+    "gulp-csso": "^3.0.0",
+    "gulp-imagemin": "^3.2.0",
     "gulp-plumber": "1.1.0",
     "gulp-postcss": "6.1.1",
-    "gulp-sass": "2.3.1"
+    "gulp-sass": "2.3.1",
+    "gulp-svgstore": "^6.1.0"
   },
   "scripts": {
     "test": "editorconfig-tools check *",
-    "build": "gulp style",
-    "start": "gulp serve"
+    "build": "gulp build",
+    "start": "npm run build && gulp serve"
   },
   "engines": {
     "node": "5.11"
